typescript/checker/tests/conformance/Symbols/ES5SymbolProperty1.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            78,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolProperty1.ts:5:5
  |
5 | var Symbol: SymbolConstructor;
  |     ^^^^^^

